# Py4eGPS

./: .gitignore  MANIFEST.in  README.md  README.zh.md  pyproject.toml
eGPS4Py/: __init__.py
eGPS4Py/constant/: constant.py  look_template.ipynb
eGPS4Py/ete3egps/: __init__.py  utils.py
eGPS4Py/ete3egps/clustering/: __init__.py  clustertree.py  clustvalidation.py
eGPS4Py/ete3egps/coretype/: arraytable.py  seqgroup.py  tree.py
eGPS4Py/ete3egps/egps2/: data.json  example_data.json  jvm_launcher.py  test_launch.py
eGPS4Py/ete3egps/ncbi_taxonomy/: ncbiquery.py
eGPS4Py/ete3egps/parser/: fasta.py  newick.py  text_arraytable.py
eGPS4Py/ete3egps/phylo/: __init__.py  phylotree.py  reconciliation.py  spoverlap.py
eGPS4Py/myutils/: __init__.py  dicts.py  lists.py  sets.py
eGPS4Py/phylo/: __init__.py  trees.py
eGPS4Py/study.pandas/: 10_minutes_intro.ipynb
tests/: test1.py
tests/test_ete/: process.ipynb  test_arraytable.py  test_ncbiquery.py  test_phylotree.py  test_seqgroup.py  test_tree.py
tests/test_ete/example_clustering/: bubbles_validation.py  cluster_visualization.py  clustering_tree.py
tests/test_ete/example_ncbiquery/: test2.py
tests/test_ete/example_phylogenies/: dating_evolutionary_events.py  link_sequences_to_phylogenies.py  orthology_and_paralogy_prediction.py  phylotree_visualization.py  species_aware_phylogenies.py  tree_reconciliation.py
tests/test_ete/example_vis/: custom_tree_visualization.py
tests/test_ete/examples_general/: add_features.py  byoperand_search.py  copy_and_paste_trees.py  create_trees_from_scratch.py  custom_search.py  generate_tree_table.py  get_common_ancestor.py  get_distances_between_nodes.py  get_midpoint_outgroup.py  getting_leaves.py  label_nodes.py  nhx_format.py  search_nodes.py  (+6 more)
(+4 files in other folders)
